--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>Quote of the Day by <a href="https://anirudddh.github.io/resume/"> Aniruddh </a></header>
+      <header>Quote of the Day by <a href="https://linktr.ee/Anirudddh"> Aniruddh </a></header>
       <div class="content">
         <div class="quote-area">
           <i class="fas fa-quote-left"></i>
