--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html lang="en" dir="ltr">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3099098391927254"
+     crossorigin="anonymous"></script>
     <meta charset="utf-8">  
     <title>Random Quote Generator by Aniruddh</title>
     <link rel="stylesheet" href="style.css">
